# Speller

./: CMakeLists.txt
headers/: BTSCheker.h  BTrie.h  BinTreeChecker.h  Checker.h  Cheker.h  HashTable.h  HashTableChecker.h  TrieChecker.h  VectorChecker.h  vectorCheker.h
sources/: BTSCheker.cpp  BTrie.cpp  BinTreeChecker.cpp  Checker.cpp  Cheker.cpp  HashTable.cpp  HashTableChecker.cpp  TrieChecker.cpp  VectorChecker.cpp  main.cpp  vectorCheker.cpp
